deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipeline-depl
  labels:
    app: login
spec:
  selector:
    matchLabels:
      app: pipeline
  template:
    metadata:
      labels:
        app: pipeline
    spec:
      containers:
      - name: login
        image: prady0t/pipeline:1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3001
