sample-ingress.yaml
# Just a sample
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipeline-ingress
  labels:
    name: pipeline-ingress
spec:
  rules:
  - host: anythinghere.com
    http:
      paths:
      - pathType: Exact
        path: "/"
        backend:
          service:
            name: pipeline-service
            port: 
              number: 3001
